# fifa-WC-tickets

./: .gitignore  README.md  index.html  main.py  package-lock.json  package.json  pyproject.toml
data/: demo_trip_spec.json  emerging_players_scouting_report.md  fifa2026.db
data/player_images/: index.html  index.md  manifest.csv  manifest.json
deal_hunter/: __init__.py  agent.py  brightdata.py  cache.py  cli.py  fixtures.py  models.py  planner.py  renderer.py  specs.py  web_demo.py  worldcup_db.py
rising_stars_agent/: DATA_SOURCES.md  README.md  emerging_players_agent.py  emerging_players_report.md  fetch_player_images.py  fixtures.csv  football_data_client.py  players.csv  serve_report.py  venues.csv
src/: App.tsx  index.css
src/components/ui/: ai-prompt-box.tsx
web/: app.js  index.html  styles.css
